playbin: If we had a previous autoplugged sink, try to reuse it

https://bugzilla.gnome.org/show_bug.cgi?id=701997